fixed overflow heights

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@ body {
   #header {
     background           : url('../img/bg5.jpg') top no-repeat fixed;
     width                : 100%;
-    height               : 40%;
+    height               : 60%;
     background-size      : cover;
     font-family          : 'Montserrat', sans-serif;
     font-weight          : 700;
@@ -65,7 +65,7 @@ body {
     height               : 60%;
     width                : 100%;
     background-size      : cover;
-    // overflow             : hidden;
+    overflow             : hidden;
   
     .verse-box {
       margin               : 55px auto;
